--- a/index.html
+++ b/index.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toy Game</title>
-    
+
     <link rel="stylesheet" href="TTT.css">
 </head>
+
 <body>
-     <nav>
-         <ul>
-             <li>Zero_Kanta.com</li>
-         </ul>
-     </nav>
-     <div class ="gamecontainer">
-         <div class="container">
-             <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
-             <div class="box bt-0"><span class="boxtext"></span></div>
-             <div class="box bt-0 br-0"><span class="boxtext"></span></div>
-             <div class="box bl-0"><span class="boxtext"></span></div>
-             <div class="box"><span class="boxtext"></span></div>
-             <div class="box br-0"><span class="boxtext"></span></div>
-             <div class="box bl-0 bb-0"><span class="boxtext"></span></div>
-             <div class="box bb-0"><span class="boxtext"></span></div>
-             <div class="box bb-0 br-0"><span class="boxtext"></span></div>
-         </div>
-         <div class="gameinfo">
-             <h1>Welcome to Zero kanta</h1>
-             <div class="turn">
-                 <span class="info">Turn for X</span>
-                  
-             </div>
-             <div class="btn">
+    <nav>
+        <ul>
+            <li>Zero_Kanta.com</li>
+        </ul>
+    </nav>
+    <div class="gamecontainer">
+        <div class="container">
+            <div class="line"></div>
+            <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
+            <div class="box bt-0"><span class="boxtext"></span></div>
+            <div class="box bt-0 br-0"><span class="boxtext"></span></div>
+            <div class="box bl-0"><span class="boxtext"></span></div>
+            <div class="box"><span class="boxtext"></span></div>
+            <div class="box br-0"><span class="boxtext"></span></div>
+            <div class="box bl-0 bb-0"><span class="boxtext"></span></div>
+            <div class="box bb-0"><span class="boxtext"></span></div>
+            <div class="box bb-0 br-0"><span class="boxtext"></span></div>
+        </div>
+        <div class="gameinfo">
+            <h1>Welcome to Zero kanta</h1>
+            <div>
+                <span class="info">Turn for X</span>
                 <button id="reset">Reset</button>
-             </div>
-             <div class="imgbox">
-                 <img src="win.gif" alt=""/>
-             </div>
-         </div>
-     </div>
-     <script src="TTT.js"></script>
+            </div>
+            <div class="imgbox">
+                <img src="win.gif" alt="" />
+            </div>
+        </div>
+    </div>
+    <script src="TTT.js"></script>
 </body>
+
 </html>
